--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,25 +28,19 @@ jobs:
     needs: golint
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
 
     - name: Set up Go 1.x
       uses: actions/setup-go@v2
       with:
         go-version: ^1.15
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
-
     - name: Get dependencies
       run: |
         go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
 
     - name: Build
-      run: go build -v ./...
+      run: go build -v -race ./...
 
     - name: Test
       run: go test -v ./...
