--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,6 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: echo $PWD
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
@@ -29,6 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - run: echo $PWD
 
     - name: Set up Go 1.x
       uses: actions/setup-go@v2
