debug CI test coverage

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -50,6 +50,7 @@ jobs:
       uses: codecov/codecov-action@v1.0.15
       with:
         name: masomo-go
-        # token: f64cf858-6c49-4503-ab35-3cd211c6171a # todo: secret
+        token: f64cf858-6c49-4503-ab35-3cd211c6171a # todo: secret
+        working-directory: backend
         file: cov.txt
         env_vars: GO
