--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -44,13 +44,14 @@ jobs:
       run: go build -v -race ./...
 
     - name: Test
-      run: go test -v -coverprofile=cov.txt -covermode=atomic ./...
+      run: go test -v -coverprofile=coverage.txt -covermode=atomic ./...
 
     - name: Upload test coverage
       uses: codecov/codecov-action@v1.0.15
       with:
         name: masomo-go
-        token: f64cf858-6c49-4503-ab35-3cd211c6171a # todo: secret
-        working-directory: backend
-        file: cov.txt
+        token: ${{ secrets.CODECOV_TOKEN }}
+        directory: backend
+        file: ./coverage.txt
         env_vars: GO
+        verbose: true
