Set up DB, migrations and ORM #6 #7
configure Postgres, Goose and SQLBoiler ❤️

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,10 +1,25 @@
+USERNAME?=""
+
 # ==============================================================================
 # Administration
 
-USERNAME?=""
+MIGCMD?=up
+ARG1?=""
+ARG2?=""
+migrate:
+	go run github.com/trezcool/masomo/apps/admin migrate $(MIGCMD) $(ARG1) $(ARG2)
+
+EMAIL?=""
+ADMIN?=false
+adduser:
+ifeq ($(ADMIN),true)
+	go run github.com/trezcool/masomo/apps/admin adduser -username $(USERNAME) -email $(EMAIL) -admin
+else
+	go run github.com/trezcool/masomo/apps/admin adduser -username $(USERNAME) -email $(EMAIL)
+endif
 
 resetpassword:
-	go run github.com/trezcool/masomo/backend/apps/admin resetpassword -username $(USERNAME)
+	go run github.com/trezcool/masomo/apps/admin resetpassword -username $(USERNAME)
 
 # ==============================================================================
 # Tests & Linting
@@ -15,3 +30,9 @@ lint:
 
 test: lint
 	ENV=TEST go test -v -race ./...
+
+# ==============================================================================
+# SQLBoiler models generation
+
+boil:
+	cd config && sqlboiler psql
