--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -46,6 +46,12 @@ jobs:
     - name: Build
       run: go build -v -race ./...
 
+    - name: Setup PostgreSQL
+      uses: Harmon758/postgresql-action@v1.0.0
+      with:
+        postgresql version: 13.1
+        postgresql db: masomotest
+
     - name: Test
       env:
         ENV: TEST
