--- a/backend/config/.env.test
+++ b/backend/config/.env.test
@@ -1,3 +1,3 @@
 TEST_DEBUG = "0"
-TEST_DBNAME = "masomotest"
-TEST_SRVJWTEXPIRATIONDELTA = "10m0s"
+TEST_DATABASE.NAME = "masomotest"
+TEST_SERVER.JWTEXPIRATIONDELTA = "10m0s"
