#40 migrate to go1.16beta1 and use `embed`

--- a/backend/sqlboiler.toml
+++ b/backend/sqlboiler.toml
@@ -1,4 +1,4 @@
-output = "../storage/database/sqlboiler/models"
+output = "storage/database/sqlboiler/models"
 wipe = true
 no-hooks = true
 add-global-variants = true
