--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,10 +34,16 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v2
-      with:
-        go-version: ^1.15
+#    - name: Set up Go 1.x
+#      uses: actions/setup-go@v2
+#      with:
+#        go-version: ^1.15
+
+    - name: Set up Go 1.16beta
+      run: |
+        mkdir opt && cd opt
+        git clone https://github.com/udhos/update-golang && cd update-golang
+        RELEASE=1.16beta1 ./update-golang.sh
 
     - name: Get dependencies
       run: |
