--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,16 +35,17 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-#    - name: Set up Go 1.x
-#      uses: actions/setup-go@v2
-#      with:
+    - name: Set up Go 1.x
+      uses: actions/setup-go@v2
+      with:
 #        go-version: ^1.15
+        go-version: 1.16beta1
 
-    - name: Set up Go 1.16beta
-      run: |
-        cd /opt
-        git clone https://github.com/udhos/update-golang && cd update-golang
-        sudo RELEASE=1.16beta1 ./update-golang.sh
+#    - name: Set up Go 1.16beta
+#      run: |
+#        cd /opt
+#        git clone https://github.com/udhos/update-golang && cd update-golang
+#        sudo RELEASE=1.16beta1 ./update-golang.sh
 
     - name: Get dependencies
       run: |
