--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -40,6 +40,7 @@ jobs:
       with:
 #        go-version: ^1.15
         go-version: 1.16beta1
+        stable: false
 
 #    - name: Set up Go 1.16beta
 #      run: |
