--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -39,7 +39,7 @@ jobs:
       uses: actions/setup-go@v2
       with:
 #        go-version: ^1.15
-        go-version: 1.16beta1
+        go-version: 1.16-beta1
         stable: false
 
 #    - name: Set up Go 1.16beta
