--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,7 +16,7 @@ env:
   ENV: QA
 
 jobs:
-# todo: make it work with Go 1.16beta
+# todo: enable when Go 1.16 is official
 #  golint:
 #    name: Go Lint
 #    runs-on: ubuntu-latest
@@ -41,6 +41,14 @@ jobs:
 #        go-version: ^1.15
         go-version: 1.16.0-beta1
         stable: false
+
+    # make it work with Go 1.16beta for now
+    - name: Run golangci-lint
+      uses: golangci/golangci-lint-action@v2
+      with:
+        version: v1.33.0
+        working-directory: backend
+        skip-go-installation: true
 
     - name: Get dependencies
       run: |
