--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,21 +16,29 @@ env:
   ENV: QA
 
 jobs:
-# todo: enable when Go 1.16 is official
-#  golint:
-#    name: Go Lint
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Run golangci-lint
-#        uses: golangci/golangci-lint-action@v2
-#        with:
-#          version: v1.33.0
-#          working-directory: backend
+  golint:
+    name: Go Lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      # make it work with Go 1.16beta for now
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16.0-beta1
+          stable: false
+
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          version: v1.33.0
+          working-directory: backend
+          skip-go-installation: true
 
   gobuild:
     name: Go Build
-#    needs: golint
+    needs: golint
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -42,22 +50,12 @@ jobs:
         go-version: 1.16.0-beta1
         stable: false
 
-    # make it work with Go 1.16beta for now
-    - name: Run golangci-lint
-      uses: golangci/golangci-lint-action@v2
-      with:
-        version: v1.33.0
-        working-directory: backend
-        skip-go-installation: true
-
     - name: Get dependencies
       run: |
-        go version
         go get -v -t -d ./...
 
     - name: Build
       run: |
-        go version
         go build -v -race ./...
 
     - name: Setup PostgreSQL
@@ -75,7 +73,6 @@ jobs:
         TEST_DATABASE.USER: masomotest
         TEST_DATABASE.PASSWORD: masomotest
       run: |
-        go version
         go test -p 1 -timeout 2m -coverprofile=coverage.txt -covermode=atomic -v ./...
 
     - name: Upload test coverage
