--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           version: v1.33.0
           working-directory: backend
-          skip-go-installation: true
+          skip-go-installation: "true"
 
   gobuild:
     name: Go Build
