run with app user inside container

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,8 +3,9 @@
 
 FROM golang:1.16beta1 as build
 
-ARG VCS_REF
-ARG PKG_NAME=github.com/trezcool/masomo
+ARG MODULE
+ARG VCSREF
+ARG PACKAGES
 ENV CGO_ENABLED=0
 
 # Copy the source code
@@ -12,8 +13,7 @@ WORKDIR /app
 COPY . .
 
 # Build the binaries
-RUN go build -o bin/ -ldflags "-X ${PKG_NAME}/core.build=${VCS_REF}" ${PKG_NAME}/apps/admin
-RUN go build -o bin/ -ldflags "-X ${PKG_NAME}/core.build=${VCS_REF}" ${PKG_NAME}/apps/api
+RUN go build -o bin/ -ldflags "-X ${MODULE}/core.build=${VCSREF}" ${PACKAGES}
 
 
 # ==============================================================================
@@ -25,5 +25,6 @@ FROM alpine:3.12
 WORKDIR /app
 COPY --from=build /app/bin/* /app/
 
-# Start API service
-CMD ["./api"]
+# Create app user
+RUN adduser -D app
+USER app
