--- a/backend/docker-compose.qa.yml
+++ b/backend/docker-compose.qa.yml
@@ -3,16 +3,12 @@ version: '2'
 services:
   masomo-web:
     container_name: masomo-web
-    build:
-      context: .
-      args:
-        - MODULE
-        - VCSREF
-        - PACKAGES=${MODULE}/apps/admin ${MODULE}/apps/api
+    image: trezcool/masomo-api
     ports:
       - '8000:8000' # api
       - '9000:9000' # debug
     command: ./api
+    restart: unless-stopped
     depends_on:
       - db
     environment:
@@ -23,7 +19,7 @@ services:
       QA_SENDGRIDAPIKEY:
       QA_ROLLBARTOKEN:
       QA_DATABASE__HOST: db
-      QA_DATABASE__USER: masomo
+      QA_DATABASE__USER:
       QA_DATABASE__PASSWORD:
       QA_DATABASE__ADMINUSER:
       QA_DATABASE__ADMINPASSWORD:
@@ -32,4 +28,4 @@ services:
 networks:
   default:
     external:
-      name: shared
+      name: shared_default
