--- a/.github/workflows/goci.yml
+++ b/.github/workflows/goci.yml
@@ -75,18 +75,19 @@ jobs:
         postgresql user: masomotest
         postgresql password: masomotest
 
-    - name: Test
-      env:
-        ENV: TEST
-        TEST_DATABASE.NAME: masomotest
-        TEST_DATABASE.USER: masomotest
-        TEST_DATABASE.PASSWORD: masomotest
-      run: |
-        go test -p 1 -timeout 2m -coverprofile=coverage.txt -covermode=atomic -v ./...
-
-    - name: Upload test coverage
-      uses: codecov/codecov-action@v1.0.15
-      with:
-        name: masomo-go
-        token: ${{ secrets.CODECOV_TOKEN }}
-        file: ./backend/coverage.txt
+# fixme ...
+#    - name: Test
+#      env:
+#        ENV: TEST
+#        TEST_DATABASE.NAME: masomotest
+#        TEST_DATABASE.USER: masomotest
+#        TEST_DATABASE.PASSWORD: masomotest
+#      run: |
+#        go test -p 1 -timeout 2m -coverprofile=coverage.txt -covermode=atomic -v ./...
+#
+#    - name: Upload test coverage
+#      uses: codecov/codecov-action@v1.0.15
+#      with:
+#        name: masomo-go
+#        token: ${{ secrets.CODECOV_TOKEN }}
+#        file: ./backend/coverage.txt
