--- a/.github/workflows/gocd.yml
+++ b/.github/workflows/gocd.yml
@@ -52,6 +52,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
+          context: .
+          file: ./Dockerfile
           push: true
           tags: |
             trezcool/masomo-api:${{ github.sha }}
