--- a/.github/workflows/gocd.yml
+++ b/.github/workflows/gocd.yml
@@ -51,9 +51,9 @@ jobs:
 
       - name: Build and push
         uses: docker/build-push-action@v2
+        env:
+          PACKAGES: "${{ env.MODULE }}/apps/admin ${{ env.MODULE }}/apps/api"
         with:
-          context: .
-          file: ./Dockerfile
           push: true
           tags: |
             trezcool/masomo-api:${{ github.sha }}
@@ -63,7 +63,7 @@ jobs:
           build-args: |
             MODULE=${{ env.MODULE }}
             VCSREF=${{ github.sha }}
-            PACKAGES=${{ env.MODULE }}/apps/admin ${{ env.MODULE }}/apps/api
+            PACKAGES=${{ env.PACKAGES }}
             BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”`
 
   godeploy:
