--- a/.github/workflows/gocd.yml
+++ b/.github/workflows/gocd.yml
@@ -32,10 +32,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-vendor-cache-
 
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -59,7 +55,6 @@ jobs:
           PACKAGES: "${{ env.MODULE }}/apps/admin ${{ env.MODULE }}/apps/api"
         with:
           context: ./backend/
-#          file: ./Dockerfile
           push: true
           tags: |
             trezcool/masomo-api:${{ github.sha }}
@@ -84,7 +79,7 @@ jobs:
         with:
           playbook: play.yml
           requirements: requirements.yml
-          directory: ./deploy/ansible/
+          directory: ./backend/deploy/ansible/
           key: ${{ secrets.DEPLOY_SSH_KEY }}
           vault_password: ${{ secrets.DEPLOY_VAULT_PASSWORD }}
           options: |
