--- a/backend/deploy/ansible/ansible.cfg
+++ b/backend/deploy/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-vault_password_file = ./.vault_pass
+# vault_password_file = ./.vault_pass ; todo: use ENV var
 # allow_world_readable_tmpfiles = True ; fixme: deprecated
 # host_key_checking = False
 
