--- a/.github/workflows/goci.yml
+++ b/.github/workflows/goci.yml
@@ -27,7 +27,7 @@ jobs:
 #      - name: Set up Go 1.x
 #        uses: actions/setup-go@v2
 #        with:
-#          go-version: 1.16.0-beta1
+#          go-version: 1.16.0-rc1
 #          stable: false
 #
 #      - name: Run golangci-lint
@@ -48,7 +48,7 @@ jobs:
       uses: actions/setup-go@v2
       with:
 #        go-version: ^1.15
-        go-version: 1.16.0-beta1
+        go-version: 1.16.0-rc1
         stable: false
 
     - name: Vendor packages
